# manifold-nash-equilibrium

./: HANDOFF.md  PLAN.md  pyproject.toml  ty.toml
.hypothesis/constants/: 240b965ebc4c32ca  2b4db4fa66d1a9b8  4bcc82a7d2604517  4cdd38aa248ede4f  5617e8bc523c8b2a  6ae780d0d29c23aa  823fbf507ff49ad9  8b8d21e1cf21d9f9  939686c2aa45601f  a84029b624f5a492  a8924876a568adbc  c17ea88b2641f9b7  db89fe18746a05f1  e9c91b9b4e3c5c6e  ef85737f6f796314  f55053da5d6d3f0b
.leann/indexes/nash-mhc/: documents.ids.txt  documents.index  documents.leann.passages.idx  documents.leann.passages.jsonl
.leann/indexes/nash.mhc/: documents.ids.txt  documents.index  documents.leann.passages.idx  documents.leann.passages.jsonl
docs/: TPU_SETUP.md  TRAINING.md
notebooks/: train_3b_tpu.ipynb
references/: 2512.14925v2.html  2512.24880v1.html
src/nash_mhc/: __init__.py  inference.py  train.py  train.py.bak
src/nash_mhc/blocks/: __init__.py  decoder_block.py
src/nash_mhc/data/: __init__.py  datasets.py  loader.py  streaming.py  tokenizer.py
src/nash_mhc/layers/: __init__.py  aggregation.py  attention.py  decomposition.py  ffn.py  mhc.py
src/nash_mhc/models/: __init__.py  backbone.py
src/nash_mhc/primitives/: __init__.py  nash_solver.py  rope.py  sinkhorn.py  strided_conv.py  upsample.py
src/nash_mhc/sharding/: __init__.py  mesh.py  shard.py  specs.py
src/nash_mhc/training/: __init__.py  checkpoint.py  loop.py  loss.py  metrics.py
src/nash_mhc/types/: __init__.py  arrays.py  (+2 more)
tests/: conftest.py
tests/invariants/: test_nash.py  test_sinkhorn.py
tests/sharding/: test_mesh.py
