[project]
name = "nash-mhc"
version = "0.1.0"
description = "Deep-Equilibrium Engine: JAX/TPU language model with mHC and MAHA"
readme = "README.md"
authors = [
    { name = "Dutch Casadaban", email = "caz.dutch@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Core JAX ecosystem
    "jax>=0.4.30",
    "equinox>=0.11.0",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "lineax>=0.0.5",
    # Type safety
    "jaxtyping>=0.2.28",
    "beartype>=0.18.0",
    # Data pipeline
    "datasets>=2.16.0",
    "grain-nightly",
    "orbax-checkpoint>=0.11.31",
    "clu>=0.0.12",
    "wandb>=0.23.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]
tpu = [
    "jax[tpu]>=0.4.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nash_mhc"]
